overflow on mobile fixed

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@ body {
   font-weight: 900;
   transition: 0.3s;
   padding: 10px;
+  overflow: hidden;
 }
 
 .field-cell {
